--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,21 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/(header_footer)/products/[id]/page.tsx",
+    "tailwind.config.js",
+    "largeee.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
